<?xml version="1.0" encoding="utf-8"?>
<!-- com.acv.cheerz -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.acv.cheerz"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <com.acv.cheerz.view.HeaderView
        android:id="@+id/headerView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.acv.cheerz.view.HeaderView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_40dp"
        android:paddingRight="@dimen/dimen_40dp" >

        <com.acv.cheerz.customviews.charting.MTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:text="@string/email_adress"
            android:textColor="#7b2f77"
            android:textSize="@dimen/dimen_13dp"
            custom:txtFont="KozGoPr6N_Light" />

        <com.acv.cheerz.customviews.charting.MEditText
            android:id="@+id/login_edt_email_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_34dp"
            android:background="@drawable/login_edt"
            android:gravity="center_vertical"
            android:hint="@string/e_email_hint"
            android:paddingLeft="@dimen/dimen_10dp"
            android:paddingRight="@dimen/dimen_10dp"
            android:singleLine="true"
            android:textColor="#818181"
            android:textSize="@dimen/dimen_13dp"
            custom:txtFont="KozGoPr6N_Light" />

        <com.acv.cheerz.customviews.charting.MTextView
            android:layout_marginTop="@dimen/dimen_30dp"
            android:id="@+id/login_btn_confirm_id"
            android:layout_width="@dimen/dimen_188dp"
            android:layout_height="@dimen/dimen_37dp"
            android:background="@drawable/forgotpassword_btn"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/ebe7ef"
            android:textSize="@dimen/dimen_13dp"
            custom:txtFont="KozGoPr6N_Light" />
    </LinearLayout>

</LinearLayout>