<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.acv.cheerz.view.HeaderView
        android:id="@+id/header_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.acv.cheerz.view.HeaderView>

    <RelativeLayout
        android:id="@+id/detail_top_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_id"
        android:background="@drawable/backround_top" >

        <com.acv.cheerz.view.RoundImageView
            android:id="@+id/detail_icon_artist_id"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/artist_temp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_top_layout_id"
        android:background="@drawable/background_fan_ranking" >

        <ImageView
            android:id="@+id/imgLine_id"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/line_vertica" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"
            android:layout_toRightOf="@+id/imgLine_id"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/detail_name_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/bb328a"
                    android:textSize="@dimen/title_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birdthday"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/detail_artist_birthday_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="16/05/1988"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hometown"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/detail_artist_hometown_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="Toronto"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/detail_artist_nickname_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="alibaba"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_color"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/detail_artist_favcolor_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="red"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/characteristic:"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/detail_artist_char_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="Fire"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/detail_artist_facebook_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="don&apos;t know"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLine_id"
            android:text="@string/comment"
            android:textColor="@color/bb328a"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
             />
    </RelativeLayout>

</RelativeLayout>